--- a/src/main/resources/templates/beerForm.html
+++ b/src/main/resources/templates/beerForm.html
@@ -46,7 +46,7 @@
         <input type="hidden" th:field="*{createdDate}" />
         <input type="hidden" th:field="*{lastModifiedDate}" />
 
-        <button type="submit" class="btn btn-primary">Update Beer</button>
+        <button type="submit" class="btn btn-primary">Save Beer</button>
     </form>
 
     <a th:href="@{/web/beers}" class="btn btn-secondary mt-3">Back to Beer List</a>
