--- a/src/main/resources/templates/beers.html
+++ b/src/main/resources/templates/beers.html
@@ -11,6 +11,8 @@
 <div class="container mt-5">
     <h1 class="mb-4">Beer List</h1>
 
+    <p>Total Beers: <span id="totalItems" th:text="${totalItems}"></span></p>
+
     <a href="/web/beer/new" class="btn btn-primary mb-3" id="createNewBeer">Create New Beer</a>
 
     <nav aria-label="Page navigation" th:if="${totalPages > 1}">
@@ -70,8 +72,8 @@
             <td th:text="${beer.quantityOnHand}" th:id="'beerQuantity-' + ${beer.id}">Quantity</td>
             <td>
                 <a th:href="@{/web/beer/{id}(id=${beer.id})}" class="btn btn-primary btn-sm" th:id="'viewBeer-' + ${beer.id}">View</a>
-                <a th:href="@{/web/beer/{id}/edit(id=${beer.id})}" class="btn btn-secondary btn-sm" th:id="'editBeer-' + ${beer.id}">Edit</a>
-                <form th:action="@{/web/beer/{id}/delete(id=${beer.id})}" method="post" style="display: inline;">
+                <a th:href="@{/web/beer/edit/{id}(id=${beer.id})}" class="btn btn-secondary btn-sm" th:id="'editBeer-' + ${beer.id}">Edit</a>
+                <form th:action="@{/web/beer/delete/{id}(id=${beer.id})}" method="post" style="display: inline;">
                     <input type="hidden" name="_method" value="delete" />
                     <button type="submit" class="btn btn-danger btn-sm" th:id="'deleteBeer-' + ${beer.id}" onclick="return confirm('Are you sure you want to delete this beer?')">Delete</button>
                 </form>
